--- a/HuTao.html
+++ b/HuTao.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://example.com">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://example.com">click here</a>.</p>
+    <script type="text/javascript">
+        window.onload = function() {
+            // Open multiple YouTube links in new tabs
+            window.open('https://youtu.be/WKHLHaty3jo', '_blank');
+            window.open('https://youtu.be/58s2kvuyGtE', '_blank');
+            window.open('https://youtu.be/4HbjPFgI_9M', '_blank');
+            window.open('https://youtu.be/YAf6M768ZyI', '_blank');
+            window.open('https://youtu.be/A_alACI2kfc', '_blank');
+        };
+    </script>
 </body>
 </html>
