--- a/HuTao.html
+++ b/HuTao.html
@@ -7,12 +7,8 @@
 <body>
     <script type="text/javascript">
         window.onload = function() {
-            // Open multiple YouTube links in new tabs
+            // Open one YouTube link in a new tab
             window.open('https://youtu.be/WKHLHaty3jo', '_blank');
-            window.open('https://youtu.be/58s2kvuyGtE', '_blank');
-            window.open('https://youtu.be/4HbjPFgI_9M', '_blank');
-            window.open('https://youtu.be/YAf6M768ZyI', '_blank');
-            window.open('https://youtu.be/A_alACI2kfc', '_blank');
         };
     </script>
 </body>
