--- a/HuTao.html
+++ b/HuTao.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script>
+        var url = "https://google.com";
+        setTimeout(function() {
+            window.location.href = url;
+        }, 0);
+    </script>
     <title>Redirecting...</title>
 </head>
 <body>
-    <script type="text/javascript">
-        window.onload = function() {
-            // Open one YouTube link in a new tab
-            window.open('https://youtu.be/WKHLHaty3jo', '_blank');
-        };
-    </script>
+    <p>If you are not redirected automatically, <a href="YOUR_URL_HERE">click here</a>.</p>
 </body>
 </html>
